<resources>
  <string name="ECDSA_crypto_type">ECDSA | BTC/ETH compatible</string>
  <string name="about_announcement">Receive Announcements</string>
  <string name="about_contact_us">Contact Email</string>
  <string name="about_crowdloans">Learn about Crowdloans</string>
  <string name="about_github">GitHub Source Code</string>
  <string name="about_instagram">Like on Instagram</string>
  <string name="about_medium">Read on Medium</string>
  <string name="about_privacy">Privacy policy</string>
  <string name="about_support">Ask for Support</string>
  <string name="about_telegram">Join us on Telegram</string>
  <string name="about_terms">Terms and Conditions</string>
  <string name="about_title">About</string>
  <string name="about_twitter">Follow on Twitter</string>
  <string name="about_version">App version</string>
  <string name="about_website">Official Website</string>
  <string name="about_wiki">Learn on Wiki</string>
  <string name="about_youtube">Subscribe on YouTube</string>
  <string name="account_add_already_exists_message">The account already exists. Please try another one.</string>
  <string name="account_address">Account address</string>
  <string name="account_confirmation_details">Choose the words in the right order</string>
  <string name="account_confirmation_title">Confirm mnemonic</string>
  <string name="account_create_details">Use a non-digital way to backup, such as writing it down on paper.</string>
  <string name="account_create_title">Backup mnemonic</string>
  <string name="account_creation_info">The mnemonic is used to recover access to your account. Write it down as you will not be able to recover your account without it!</string>
  <string name="account_custom_secret">Accounts with a changed secret</string>
  <string name="account_delete_confirm">Forget</string>
  <string name="account_delete_confirmation_description">Make sure you have exported your account before proceeding.</string>
  <string name="account_delete_confirmation_title">Forget this account?</string>
  <string name="account_error_try_another_one">Please try another one.</string>
  <string name="account_export">Export account</string>
  <string name="account_export_action">Export</string>
  <string name="account_export_password_change">Change password</string>
  <string name="account_export_warning_message">Sharing or copying your secret is a high risk operation, don’t send it to anyone. Would you like to proceed with the sharing/copying process?</string>
  <string name="account_export_warning_title">Be careful</string>
  <string name="account_import_ethereum_raw_seed_placeholder">ETH accounts raw seed (64 hex symbols)</string>
  <string name="account_import_invalid_keystore">Invalid restore JSON. Please,make sure that input contains a valid JSON.</string>
  <string name="account_import_invalid_seed">The seed is invalid. Please make sure that your input contains 64 hex symbols.</string>
  <string name="account_import_json_no_network">The JSON contains no network information. Please specify it below.</string>
  <string name="account_import_password_placeholder">Password</string>
  <string name="account_import_substrate_raw_seed_placeholder">Substrate account raw seed (64 hex symbols)</string>
  <string name="account_import_wrong_network" formatted="false">The network in the JSON file is %s, and does not match the selected %s. The latter will be used to import an account.</string>
  <string name="account_info_title">Account</string>
  <string name="account_needed_message">You don’t have account for this network, you can create or import an account.</string>
  <string name="account_needed_title">Account needed</string>
  <string name="account_no_chain_projection">No account found</string>
  <string name="account_option">Account option</string>
  <string name="account_shared_secret">Accounts with a shared secret</string>
  <string name="account_stats_avg_transaction_time_title">Avg. transaction time</string>
  <string name="account_stats_description_text">Your Multichain Score is based on your onchain journey through 3 ecosystems: Ethereum, Polygon and Binance Smart Chain</string>
  <string name="account_stats_error_message">Unable to retrieve account score information. Please try again later.</string>
  <string name="account_stats_hold_tokens_usd_title">Hold tokens USD</string>
  <string name="account_stats_max_transaction_time_title">Max transaction time</string>
  <string name="account_stats_min_transaction_time_title">Min transaction time</string>
  <string name="account_stats_native_balance_usd_title">Native balance USD</string>
  <string name="account_stats_rejected_transactions_title">Rejected transactions</string>
  <string name="account_stats_title">Your score</string>
  <string name="account_stats_total_transactions_title">Total transactions</string>
  <string name="account_stats_unavailable_text">You don\'t have an EVM compatible account. If you want to see the score - add it via \"Import wallet\" option.</string>
  <string name="account_stats_updated_title">Updated</string>
  <string name="account_stats_wallet_age_title">Wallet age</string>
  <string name="account_stats_wallet_option_title">Show wallet score</string>
  <string name="account_template">%s account</string>
  <string name="accounts_add_account">Add an account</string>
  <string name="accounts_for_export">Accounts to export</string>
  <string name="accounts_not_found">No accounts were found</string>
  <string name="accounts_with_changed_key">Accounts with a changed key</string>
  <string name="accounts_with_one_key">Account with shared secret</string>
  <string name="add_node_button_title">Add node</string>
  <string name="address_history_empty_message">No history found</string>
  <string name="address_not_valid_error_message">The address format is invalid.\nMake sure that address\nbelongs to the right network</string>
  <string name="address_not_valid_error_title">Is not network address</string>
  <string name="alert_add_ethereum_message">Add Moonbeam and Moonriver accounts?</string>
  <string name="alert_add_ethereum_title">ETH accounts</string>
  <string name="alert_oversubscribed_alert_message">You will not receive rewards from the validator in this era</string>
  <string name="alert_oversubscribed_alert_title">Oversubscribed</string>
  <string name="alert_suggested_validators">Algorithmic validator suggestions do not constitute financial consultation or advice. Staking is a high-risk activity and algorithmic validator suggestions do not necessarily mitigate this risk.\n\nA validator suggested by the algorithm could still be slashed. A validator suggested by the algorithm could also change their parameters (e.g. commission rates, etc.) at any time after having been suggested and/or selected.\n\nYou could lose tokens or rewards for these or other reasons. Only stake tokens and use validator suggestions at your own discretion, after conducting due diligence and carefully considering the risks involved.</string>
  <string name="all_done">All done</string>
  <string name="all_done_alert_result_stub">Result</string>
  <string name="all_done_alert_success_stub">Success</string>
  <string name="already_have_account">I already have an account</string>
  <string name="collator_staking_sorting_delegations">Delegations</string>
  <string name="common_apply">Apply</string>
  <string name="common_confirm">Confirm</string>
  <string name="common_confirm_title">Confirmation</string>
  <string name="common_dapp">Dapp</string>
  <string name="common_filter_sort_header">Sort by:</string>
  <string name="common_reset">Reset</string>
  <string name="custom_collators_title">Stake with known collators</string>
  <string name="profile_settings_title">Settings</string>
  <string name="select_collators_warning">DISCLAIMER: Algorithmic сollator suggestions do not constitute financial consultation or advice. Staking is a high-risk activity, and algorithmic сollator suggestions do not necessarily mitigate this risk. A сollator suggested by the algorithm could still leave the pool of candidates. A сollator suggested by the algorithm could also change their parameters (e.g.,commission rates, etc.) at any time after having been suggested and/or selected. You could lose rewards for these or other reasons. Only stake tokens and use сollator suggestions at your own discretion, after conducting due diligence and carefully considering the risks involved.</string>
  <string name="select_validators_disclaimer">DISCLAIMER: Algorithmic validator suggestions do not constitute financial consultation or advice. Staking is a high-risk activity and algorithmic validator suggestions do not necessarily mitigate this risk. A validator suggested by the algorithm could still be slashed. A validator suggested by the algorithm could also change their parameters (e.g. commission rates, etc.) at any time after having been suggested and/or selected. You could lose tokens or rewards for these or other reasons. Only stake tokens and use validator suggestions at your own discretion, after conducting due diligence and carefully considering the risks involved.</string>
  <string name="staking_collator_effective_amount_bonded">Effective amount bonded</string>
  <string name="staking_collator_min_bond">Min. bond</string>
  <string name="staking_collator_self_bonded">Self-bonded</string>
  <string name="staking_collators">Collators</string>
  <string name="staking_controller_account">Controller account</string>
  <string name="staking_hint_reward_bond_more">Your rewards will be increased starting from the next era.</string>
  <string name="staking_recommended_title">Validators</string>
  <string name="staking_select_custom">Select by yourself</string>
  <string name="staking_select_recommended">Select recommended</string>
  <string name="staking_select_suggested">Select suggested</string>
  <string name="staking_start_change_collators_custom_subtitle">You should trust your collators to act competently and honestly; basing your decision purely on their current profitability could lead to reduced profits or even loss of funds.</string>
  <string name="staking_start_change_collators_suggested_subtitle">The Fearless algorithm has made a list of suggested collators based on the following criteria:</string>
  <string name="staking_start_change_collators_suggested_title">Stake with collators suggested by the algorithm</string>
  <string name="staking_start_change_validators_custom_subtitle">You should trust your nominations to act competently and honestly, basing your decision purely on their current profitability could lead to reduced profits or even a loss of funds.</string>
  <string name="staking_start_change_validators_custom_title">Stake with your validators</string>
  <string name="staking_start_change_validators_recommended_subtitle">The Fearless algorithm has select a list of recommended validators based on the criteria:</string>
  <string name="staking_start_change_validators_recommended_title">Stake with validators suggested by algorithm</string>
  <string name="staking_stash_account">Stash account</string>
  <string name="staking_validator_estimated_reward">Estimated reward</string>
  <string name="staking_validator_total_stake">Total stake</string>
  <string name="tabbar_polkaswap_title">Polkaswap</string>
  <string name="tabbar_wallet_title">Wallet</string>
  <string name="transaction_detail_status">Status</string>
  <string name="wallet_filters_extrinsics">Other transactions</string>
  <string name="wallet_filters_header">Show</string>
  <string name="wallet_filters_rewards_and_slashes">Rewards and Slashes</string>
  <string name="wallet_filters_title">Filters</string>
  <string name="wallet_filters_transfers">Transfers</string>
  <string name="ux_tab_wallet">Wallet</string>
  <string name="ux_tab_earn">Earn</string>
  <string name="ux_tab_transfer">Transfer</string>
</resources>