<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/portfolioGraph"
        android:enabled="true"
        android:icon="@drawable/ic_nav_wallet"
        android:title="@string/ux_tab_wallet"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/defiGraph"
        android:enabled="true"
        android:icon="@drawable/ic_nav_staking"
        android:title="@string/ux_tab_earn"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/polkaswapGraph"
        android:enabled="true"
        android:icon="@drawable/ic_nav_center_placeholder"
        android:title=""
        android:contentDescription="@string/tabbar_polkaswap_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/crossChainGraph"
        android:enabled="true"
        android:icon="@drawable/ic_common_cross_chain"
        android:title="@string/ux_tab_transfer"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settingsGraph"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/profile_settings_title"
        app:showAsAction="ifRoom" />
</menu>
