<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:background="@color/black">

    <jp.co.soramitsu.common.view.Toolbar
        android:id="@+id/transactionsFilterToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:homeButtonIcon="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleText="@string/wallet_filters_title"
        app:textRight="@string/common_reset"/>

    <TextView
        style="@style/TextAppearance.Soramitsu.Header3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/wallet_filters_header" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/transactionsFilterSwitchTransfers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/wallet_filters_transfers" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/transactionsFilterRewards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/wallet_filters_rewards_and_slashes" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/transactionsFilterOtherTransactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/wallet_filters_extrinsics" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <jp.co.soramitsu.common.view.PrimaryButton
        android:id="@+id/transactionFilterApplyBtn"
        style="@style/Widget.Fearless.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/common_apply" />

</LinearLayout>