<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/walletFragment"
        android:enabled="true"
        android:icon="@drawable/ic_nav_wallet"
        android:title="@string/tabbar_wallet_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/stakingFragment"
        android:enabled="true"
        android:icon="@drawable/ic_dapp_connection"
        android:title="@string/common_dapp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/profile_settings_title"
        app:showAsAction="ifRoom" />
</menu>