<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:theme="@style/PinkOverlay">

    <jp.co.soramitsu.common.view.Toolbar
        android:id="@+id/customValidatorSettingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:textRight="@string/common_reset"
        app:titleText="@string/profile_settings_title" />

    <TextView
        style="@style/TextAppearance.Soramitsu.Header3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/wallet_filters_header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/settingsFiltersList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/item_settings_filter" />

    <TextView
        style="@style/TextAppearance.Soramitsu.Header3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/common_filter_sort_header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/settingsSortingsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/item_settings_sorting" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <jp.co.soramitsu.common.view.PrimaryButton
        android:id="@+id/customValidatorSettingsApply"
        style="@style/Widget.Fearless.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/common_apply" />

</LinearLayout>