<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/confirmRebondContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/black">

    <jp.co.soramitsu.common.view.Toolbar
        android:id="@+id/confirmSetControllerToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/common_confirm_title" />

    <jp.co.soramitsu.common.view.LabeledTextView
        android:id="@+id/confirmSetControllerStashAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:actionIcon="@drawable/ic_more_vertical"
        app:label="@string/staking_stash_account" />

    <jp.co.soramitsu.common.view.LabeledTextView
        android:id="@+id/confirmSetControllerDestinationAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:actionIcon="@drawable/ic_more_vertical"
        app:label="@string/staking_controller_account" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:gravity="center|left">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_reward_24"
            app:tint="@color/white" />

        <TextView
            style="@style/TextAppearance.Soramitsu.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:includeFontPadding="false"
            android:text="@string/staking_hint_reward_bond_more"
            android:textColor="@color/white" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black4"
        android:orientation="vertical">

        <jp.co.soramitsu.feature_wallet_api.presentation.view.FeeView
            android:id="@+id/confirmSetControllerFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <jp.co.soramitsu.common.view.PrimaryButton
            android:id="@+id/confirmSetControllerConfirm"
            style="@style/Widget.Fearless.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/common_confirm" />
    </LinearLayout>
</LinearLayout>